main.css
/* ... */
.col--left {
  width: 60%;

  gap: 2rem;
}

.col--right {
  width: 40%;
  /* background-color: red; */
}

/* Section 1 */

.message-wrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 0.8rem;
}

.sticker {
  position: absolute;
  width: 18rem;
  height: 18rem;
  padding: 2rem;
  font-size: 3.2rem;
  font-family: "imagine", sans-serif;
  border: 1px solid rgba(255, 255, 255, 0.6);
  box-shadow: 0px 10px 20px var(--div);
}

.sticker::after {
  position: absolute;
  top: 16px;
  right: 10px;
  content: "";
  width: 14px;
  height: 1.6px;
  border-radius: 1px;
  background-color: var(--grey);
  transform-origin: 50% 50%;
  transform: rotate(45deg);
}
.sticker::before {
  position: absolute;
  top: 16px;
  right: 10px;
  content: "";
  width: 14px;
  height: 1.6px;
  border-radius: 1px;
  background-color: var(--grey);
  transform-origin: 50% 50%;
  transform: rotate(-45deg);
}

.sticker--yellow {
  left: -6rem;
  top: 0;
  background-color: var(--sticker-yellow);
  transform: rotate(-25deg);
}

.sticker--pink {
  left: -12rem;
  top: 35%;
  background-color: var(--sticker-pink);
  transform: rotate(10deg);
}
.sticker--blue {
  left: -6rem;
  top: 70%;
  background-color: var(--sticker-blue);
  transform: rotate(-8deg);
}
.sticker--pink-2 {
  right: -6rem;
  top: 0;
  background-color: var(--sticker-pink);
  transform: rotate(-25deg);
}

.sticker--green {
  right: -12rem;
  top: 35%;
  background-color: var(--sticker-green);
  transform: rotate(10deg);
}
.sticker--yellow-2 {
  right: -6rem;
  top: 70%;
  background-color: var(--sticker-yellow);
  transform: rotate(-8deg);
}

/* Notes */
.small-note {
  font-family: "imagine", sans-serif;
  display: inline-block;
  text-transform: none;
  line-height: 80%;
  font-size: 4rem;
  text-align: left;
}

.small-note--hero-pos {
  position: absolute;
  bottom: 0.6rem;
  right: -16rem;
}
.small-note--plan {
  position: absolute;
  bottom: 0.6rem;
  right: -20rem;
}

.by-writers-pos {
  position: absolute;
  bottom: 0.6rem;
  right: -17rem;
}

/* Hero image */
.hero-image {
  background-image: image();
}

/* Section 2 */
.three-col-grid {
  width: 100%;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
}

p.hr-heading {
  font-size: 5.2rem;
  line-height: 80%;
  font-family: "imagine", sans-serif;
}

p.desc-small {
  font-size: 1.6rem;
  max-width: 30ch;
}

/* Footer */
footer {
  background-color: var(--primary-text);
  width: 100wv;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  gap: 2.4rem;
  color: var(--light-grey);
  padding: 8rem 12rem;
}

footer > ul {
  display: flex;
  gap: 2.4rem;
}

.footer-menu > li {
  list-style: none;
}

.footer-menu > li > a {
  color: var(--light-grey);
}

.copyright {
  font-size: 1.4rem;
}

/* Video */
.video-wrapper-hero {
  position: relative;
}

.video-stats {
  width: 100%;
  border-radius: 2rem;
  border: 10px solid var(--primary-text);
}

.fixed-width {
  max-width: 15ch;
}

.notes-wrapper {
  position: absolute;
}

.notes-wrapper > p {
  font-size: 3.2rem;
  text-align: center;
}

.notes-wrapper--1 {
  left: -26%;
  top: 45%;
}
.notes-wrapper--2 {
  left: 40%;
  top: 45%;
}
.notes-wrapper--3 {
  right: -26%;
  top: 45%;
}

.arr {
  position: absolute;
  z-index: 999;
}

.arr--left {
  bottom: -33rem;
  left: 34%;
}
.arr--center {
  bottom: -1.9rem;
  left: -52%;
}

.arr--right {
  bottom: -24rem;
  right: 52%;
}

/* Form */

form {
  width: 60%;
  display: flex;
  gap: 1.6rem;
  position: relative;
}

.email-input {
  height: 6.4rem;
  flex-grow: 1;
  padding: 0 2.4rem;
  font-size: 2rem;
  outline: unset;
  border-radius: unset;
  border: 2px solid var(--div);
}

.email-input:focus {
  border: 2px solid var(--primary-text);
}

.no-card-pos {
  position: absolute;
  top: 1.2rem;
  right: -15rem;
  font-size: 2.4rem;
}

/* Slider */

.container-theming {
  display: grid;
  place-content: center;
  position: relative;
  --position: 50%;
  /* overflow: hidden; */
}

.image-container {
  max-width: 1038px;
  max-height: 678px;
  /* aspect-ratio: 16/9; */
}

.slider-image {
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: left;
}

.before-img {
  position: absolute;
  top: 0;
  left: 0;
  inset: 0;
  width: var(--position);
  /* height: 676px; */
}
/* .after-img {
  width: 100%;
  height: 676px;
} */

.slider {
  position: absolute;
  inset: 0;
  cursor: pointer;
  opacity: 0;
  /*For Firefox*/
  width: 100%;
  height: 100%;
}

.slider:focus-visible ~ .slider-button {
  outline: 2px solid var(--primary-text);
  outline-offset: 3px;
}
.slider-line {
  position: absolute;
  inset: 0;
  width: 0.2rem;
  height: 100%;
  /* background-color: var(--white); */
  z-index: 10;
  left: var(--position);
  transform: translateX(-50%);
  pointer-events: none;
}

.slider-button {
  position: absolute;
  background-color: var(--white);
  padding: 0.5rem;
  border-radius: 100vw;
  display: grid;
  place-items: center;
  top: 50%;
  left: var(--position);
  transform: translate(-50%, -50%);
  pointer-events: none;
  z-index: 20;
  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
}

/* VIDEO */
.video-player {
  display: flex;
  align-items: center;
  justify-content: center;
  position: relative;
  border-radius: 1rem;
  /* outline: 11px solid var(--primary-text); */
}

.header-sticky {
  width: 100%;
  backdrop-filter: blur(50px) contrast(90%);
  -webkit-backdrop-filter: blur(50px) contrast(90%);
  background-color: rgba(255, 255, 255, 0.7);

  position: fixed;
  top: 0;
  z-index: 999;
}

.hidden {
  display: none;
  opacity: 0;
}

/*///////////// MEDIA QUERIES ////////////*/
/* Extra small devices (phones, 600px and down) */

/* Medium devices (landscape tablets, 768px and up) */
@media only screen and (max-width: 1450px) {
  .small-note--hero-pos {
    display: none;
  }
}
/* ... */

